Fix background color for IE6 on screenshots on Firefox 4 RC page (Bug 635767)
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@84312 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/firefox/beta/4/main.css
+++ b/style/firefox/beta/4/main.css
@@ -25,14 +25,14 @@ body #wrapper {
 #firefox-beta #main-feature {
 	min-height: 200px;
 	padding-bottom: 15px;
-	background: url(/img/firefox/beta/4/screenshot.png) 300px 60px no-repeat;
+	background: url(/img/firefox/beta/4/screenshot.png) 300px 100% no-repeat;
 }
 
 #firefox-beta.platform-mac #main-feature {
-	background: url(/img/firefox/beta/4/screenshot-mac.png) 300px 60px no-repeat;
+	background-image: url(/img/firefox/beta/4/screenshot-mac.png);
 }
 #firefox-beta.platform-linux #main-feature {
-	background: url(/img/firefox/beta/4/screenshot-linux.png) 300px 60px no-repeat;
+	background-image: url(/img/firefox/beta/4/screenshot-linux.png);
 }
 
 * html #firefox-beta #main-feature { height: 200px; /* Hack for IE6 */ }
